# internal/api/docs/swagger.json
@@ -10,7 +10,7 @@
     "paths": {
         "/withdrawal-history": {
             "get": {
-                "description": "Returns a list of withdrawals of a chain id initiated by an Ethereum address or proven by it.\nAll withdrawals are fetched which are no older than 90 days.\nOnly non-finalized withdrawals older than that are fetched.\nWithdrawals are fetched in latest-first order.",
+                "description": "Returns a list of withdrawals of a chain id initiated by an Ethereum address or proven by it.\nAll withdrawals are fetched which are no older than 90 days.\nOnly non-finalized withdrawals older than that are fetched.\nWithdrawals are fetched in latest-first order.\nPaginated query, with batches of 25.",
                 "consumes": [
                     "application/json"
                 ],
@@ -30,11 +30,17 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "Chain id of withdrawal initiation",
+                        "type": "integer",
+                        "description": "Chain id of withdrawal initiation transaction",
                         "name": "chain_id",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number for pagination",
+                        "name": "page",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -114,6 +120,9 @@
                             "type": "string"
                         },
                         "source_chain_id": {
+                            "type": "integer"
+                        },
+                        "total_count": {
                             "type": "integer"
                         },
                         "withdrawals": {
